--- a/app/modules/smartportfolio/views/recommended.html
+++ b/app/modules/smartportfolio/views/recommended.html
@@ -56,7 +56,7 @@
 			<div class="thead">
 				<div class="tr">
 					<div class="th">
-						<p>{{eachSchemeType.key}} Schemes</p>
+						<p>{{eachSchemeType.key | capitalizeScheme}} Schemes</p>
 					</div>
 					<div class="th">
 						<p>Sub Type</p>
