--- a/app/modules/smartportfolio/views/schemeComparision.html
+++ b/app/modules/smartportfolio/views/schemeComparision.html
@@ -164,7 +164,7 @@
 							<div class="thead">
 								<div class="tr">
 									<div class="th col-xs-4 no-padding">
-										<p>Expense_ratio</p>
+										<p>Expense Ratio</p>
 									</div>
 									<div class="th col-xs-4 no-padding">
 										<p>Beta</p>
