--- a/less/widgets.less
+++ b/less/widgets.less
@@ -622,6 +622,7 @@ input{
 						text-align:center;
 						.money-value{
 							float:right;
+							width: 100%;
 						}
 					}
 				}
@@ -637,6 +638,7 @@ input{
 						text-align:center;
 						.money-value{
 							float:right;
+							min-width: 92px;
 						}
 					}
 				}
