--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -90,7 +90,7 @@
 				<!-- <h3 class="text-center">Your current risk score is</h3> -->
 <!-- 				<p class="text-center score">5.7</p>
 			<h4 class="text-center" ng-if="portfolio_flag">You havent started building<span class="nextline">your smart profile yet</span></h4> -->
-			<h4 class="text-center" ng-if="portfolio_flag">Withdraw now from your</h4>
+			<h4 class="text-center" ng-if="portfolio_flag">Redeem now from your</h4>
 			<p class="text-center score dashboardSubText" ng-if="portfolio_flag">CURRENT INVESTMENTS.</p>
 			<h4 class="text-center" ng-if="!portfolio_flag">You have</h4>
 			<p class="text-center score dashboardSubText" ng-if="!portfolio_flag">NO CURRENT INVESTMENTS</p>
