--- a/less/swiper.less
+++ b/less/swiper.less
@@ -153,6 +153,7 @@
             position:relative;
             margin-top:6%;
             width:100%;
+
             @media @below768{
               float: left;
             }
@@ -296,7 +297,7 @@
                   }
             }
             &.age{
-              width:4%!important;
+              /*width:4%!important;*/
               margin-left: 5px;
               margin-right: 5px;
             }
