--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -206,8 +206,8 @@
                 <div class="radio-cover">
                     <input type="radio" required id="option2Type1" name="option2" ng-model="modelVal.A9" value="op1"><label for="option2Type1"><span class="col-xs-2"></span>Take no risk, get fixed returns<div class = "nextline col-xs-10 no-padding">(Guaranteed return of 7% per annum)</div></label>
                     <input type="radio" required id="option2Type2" name="option2" ng-model="modelVal.A9" value="op2"><label for="option2Type2"><span class="col-xs-2"></span>Take low risk, get steady returns<div class = "nextline col-xs-10 no-padding">(Likely return of 10% with a chance of 5% loss)</div></label>
-                    <input type="radio" required id="option2Type3" name="option2" ng-model="modelVal.A9" value="op3"><label for="option2Type3"><span class="col-xs-2"></span>Take moderate risk, get moderate returns<div class = "nextline col-xs-10 no-padding">(Likely return of 20% with a chance of 10% loss)</div></label>
-                    <input type="radio" required id="option2Type4" name="option2" ng-model="modelVal.A9" value="op4"><label for="option2Type4"><span class="col-xs-2"></span>Take calculated risks, maximize returns<div class = "nextline col-xs-10 no-padding">(Likely return of 30% with a chance of 20% loss)</div></label>
+                    <input type="radio" required id="option2Type3" name="option2" ng-model="modelVal.A9" value="op3"><label for="option2Type3"><span class="col-xs-2"></span>Take some risk, get moderate to high returns<div class = "nextline col-xs-10 no-padding">(Likely return of 15% with a chance of 10% loss)</div></label>
+                    <input type="radio" required id="option2Type4" name="option2" ng-model="modelVal.A9" value="op4"><label for="option2Type4"><span class="col-xs-2"></span>Take high risks, maximize returns<div class = "nextline col-xs-10 no-padding">(Likely return of 25% with a chance of 20% loss)</div></label>
                 </div>
                 </form>
             </div>
@@ -215,7 +215,7 @@
         <div class="swiper-slide">
             <div class="swiper-content">
                 <form name="riskAssesment1Form4" novalidate>
-                <h2>If <span class="currency">&#8377</span> 1 lakh investment goes down to <span class="currency">&#8377</span> 80,000 <span class="nextline"> in 2 months, I will</span></h2>
+                <h2>If my <span class="currency">&#8377</span> 1 lakh investment goes down to <span class="currency">&#8377</span> 80,000 <span class="nextline"> in 2 months, I will</span></h2>
                 <div class="radio-cover">
                     <input type="radio" required id="option3Type1" name="option3" ng-model="modelVal.A19" value="op1"><label for="option3Type1"><span></span>Sell all my holdings</label>
                     <input type="radio" required id="option3Type2" name="option3" ng-model="modelVal.A19" value="op2"><label for="option3Type2"><span></span>Sell some of my holdings</label>
@@ -429,7 +429,7 @@
                     <input type="radio" required id="option2Type3" name="option2" ng-model="modelVal.A11" value="op3"><label for="option2Type3"><span></span>Sell all mutual fund holdings</label>
                     <input type="radio" required id="option2Type2" name="option2" ng-model="modelVal.A11" value="op2"><label for="option2Type2"><span></span>Shift from Equity to Debt funds</label>
                     <input type="radio" required id="option2Type4" name="option2" ng-model="modelVal.A11" value="op4"><label for="option2Type4"><span></span>Do Nothing</label>
-                    <input type="radio" required id="option2Type1" name="option2" ng-model="modelVal.A11" value="op1"><label for="option2Type1"><span></span>Look to buy more mutual funds</label>
+                    <input type="radio" required id="option2Type1" name="option2" ng-model="modelVal.A11" value="op1"><label for="option2Type1"><span></span>Buy more mutual funds</label>
                     <input type="radio" required id="option2Type1" name="option2" ng-model="modelVal.A11" value="op5"><label for="option2Type1"><span></span>Not be sure what to do</label>
                 </div>
                 </form>
