--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -301,10 +301,10 @@
     <div class="modal-content">
 		<div class="fadeIn modal-wrapper">
 			<div class="col-xs-12">
-				<div class="col-xs-2">
+				<div class="col-xs-2 col-lg-2">
 					<img src="assets/images/saveTax.png" class="img img-responsive">
 				</div>
-				<div class="col-xs-10">
+				<div class="col-xs-12 col-lg-10">
 					<div class="row">
 						<div class="col-xs-9 no-padding">
 							<p class="finance-desc"><span class="content">{{finGoalsModal.name}}</span><span class="nextline placeholder addOnlyBold">ON TRACK</span></p>
@@ -318,7 +318,7 @@
 					<div class="row">
 						<div class="no-padding col-xs-12">
 							<div class="progress">
-							    <div class="progress-bar" role="progressbar" ng-style="{'width':'{{finGoalsModal.progress}}%'}">
+							    <div class="progress-bar" role="progressbar" ng-style="{'width':{{finGoalsModal.progress}}%}">
 							    <span class="progress-price"><span class="currency">&#8377</span><span class="amount ng-binding">{{finGoalsModal.invested_value}}</span></span>
 							    <span class="progress-percentage placeholder">{{finGoalsModal.progress}}%</span>
 							    </div>
