Change Liquid goal text

--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -73,10 +73,11 @@
 						<label><span ng-click="deleteGoal('liquid')"></span></label>
 						
 					</div>
-					<div class="image-div">
+					<div class="image-div"  ng-click="startGoalAdd('liquid')">
 						<img src="assets/images/highInterest.png">
+						<button class="fin-app-btn fin-blue full-width">Earn Higher Interest</button>
 					</div>
-					<button class="fin-app-btn fin-blue full-width" ng-click="startGoalAdd('liquid')">Earn Higher Interest</button>
+					
 				</div>
 				<div class="col-xs-12 desc">
 					<!-- <p class="text-center">Conveniently park your money in<span class="nextline">smarter mutual fund alternatives than</span><span class="nextline">traditional bank accounts.</span></p> -->
