Worked on bugs and issues and other minor changes

--- a/less/gettingStarted.less
+++ b/less/gettingStarted.less
@@ -68,6 +68,9 @@
       width: 35%;
       margin-right: 3%;
       padding: 3%;
+      @media @below768{
+        width: 100%;
+      }
     }
   }
 }
