--- a/less/smartpolio.less
+++ b/less/smartpolio.less
@@ -388,9 +388,10 @@ section{
 		  padding-top:10%;
 		}
 		.sensex-status {
-		  font-size: 48px;
+		  font-size: 38px;
 		  font-family: "PlayfairDisplay";
 		  line-height: 0.75;
+		  word-wrap: break-word;
 		}
 	}
 }
