--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -2674,6 +2674,11 @@ span.error-text {
   margin-right: 3%;
   padding: 3%;
 }
+@media only screen and (max-width:768px) {
+  .fin-btn-cover.started .fin-app-btn {
+    width: 100%;
+  }
+}
 @-webkit-keyframes move {
   0% {
     -webkit-transform: translateY(0px);
@@ -2957,9 +2962,9 @@ span.error-text {
        -moz-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    left: 50%;
+    left: 40%;
     top: 0;
-    width: 20%;
+    width: 16%;
   }
 }
 .swiper-container .dot {
@@ -3353,6 +3358,7 @@ span.error-text {
   -o-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   transition: all 0.2s ease;
+  min-height: 450px;
 }
 @media only screen and (max-width:768px) {
   .swiper-container.customSwiper .swiper-content {
@@ -3554,6 +3560,11 @@ span.error-text {
 @media only screen and (max-width:768px) {
   .swiper-container.customSwiper .swiper-content.content-1 .incomeSource {
     height: 420px;
+  }
+}
+@media only screen and (max-width:768px) {
+  .swiper-container.customSwiper .swiper-content.content-1.content-risk {
+    top: 50%;
   }
 }
 .swiper-container.customSwiper .swiper-content.content-6 {
@@ -3780,6 +3791,9 @@ span.error-text {
   margin-bottom: 3%;
   margin-top: 0px;
 }
+.swiper-container.customSwiper .swiper-content.hasCheckbox {
+  min-height: 580px;
+}
 .swiper-container.customSwiper .fin-btn-group.gotoPages {
   z-index: 1000;
   width: 34%;
@@ -3827,6 +3841,7 @@ span.error-text {
   -moz-transition: opacity 0.2s ease;
   transition: opacity 0.2s ease;
   visibility: hidden;
+  min-height: 450px;
 }
 .swiper-slide-prev,
 .swiper-slide-next {
@@ -4495,8 +4510,18 @@ section.quickInvest .started {
 .goals .goal-section:nth-child(1) .goals-outer-cover:nth-child(1) .image-div img {
   width: 66%!important;
 }
+@media only screen and (max-width:768px) {
+  .goals .goal-section:nth-child(1) .goals-outer-cover:nth-child(1) .image-div img {
+    width: 40% !important;
+  }
+}
 .goals .goal-section:nth-child(1) .goals-outer-cover:nth-child(2) .image-div img {
   width: 54%!important;
+}
+@media only screen and (max-width:768px) {
+  .goals .goal-section:nth-child(1) .goals-outer-cover:nth-child(2) .image-div img {
+    width: 36% !important;
+  }
 }
 .goals .goal-section:nth-child(1) .goals-outer-cover:nth-child(2) .image-div.widthDrawImage img {
   width: 96%!important;
@@ -4504,20 +4529,50 @@ section.quickInvest .started {
 .goals .goal-section:nth-child(1) .goals-outer-cover:nth-child(3) .image-div img {
   width: 80%!important;
 }
+@media only screen and (max-width:768px) {
+  .goals .goal-section:nth-child(1) .goals-outer-cover:nth-child(3) .image-div img {
+    width: 60% !important;
+  }
+}
 .goals .goal-section:nth-child(1) .goals-outer-cover:nth-child(4) .image-div img {
   width: 58%!important;
+}
+@media only screen and (max-width:768px) {
+  .goals .goal-section:nth-child(1) .goals-outer-cover:nth-child(4) .image-div img {
+    width: 40% !important;
+  }
 }
 .goals .goal-section:nth-child(2) .goals-outer-cover:nth-child(1) .image-div img {
   width: 58%!important;
 }
+@media only screen and (max-width:768px) {
+  .goals .goal-section:nth-child(2) .goals-outer-cover:nth-child(1) .image-div img {
+    width: 40% !important;
+  }
+}
 .goals .goal-section:nth-child(2) .goals-outer-cover:nth-child(2) .image-div img {
   width: 60%!important;
+}
+@media only screen and (max-width:768px) {
+  .goals .goal-section:nth-child(2) .goals-outer-cover:nth-child(2) .image-div img {
+    width: 44% !important;
+  }
 }
 .goals .goal-section:nth-child(2) .goals-outer-cover:nth-child(3) .image-div img {
   width: 60%!important;
 }
+@media only screen and (max-width:768px) {
+  .goals .goal-section:nth-child(2) .goals-outer-cover:nth-child(3) .image-div img {
+    width: 44% !important;
+  }
+}
 .goals .goal-section:nth-child(2) .goals-outer-cover:nth-child(4) .image-div img {
   width: 60%!important;
+}
+@media only screen and (max-width:768px) {
+  .goals .goal-section:nth-child(2) .goals-outer-cover:nth-child(4) .image-div img {
+    width: 44% !important;
+  }
 }
 .goals .goals-outer-cover .goals-cover {
   height: 218px;
@@ -6847,9 +6902,10 @@ section.compareSchemes .schemeRating {
   padding-top: 10%;
 }
 section.compareSchemes .sensex-status {
-  font-size: 48px;
+  font-size: 38px;
   font-family: "PlayfairDisplay";
   line-height: 0.75;
+  word-wrap: break-word;
 }
 .retirement .typeSwiper,
 .education .typeSwiper,
