--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -6,7 +6,7 @@
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <form name="riskAssesment1Form1" novalidate ng-init="step = 1">
-            <div class="swiper-content content-1" ng-init="disabled = 'locked'">
+            <div class="swiper-content content-1 content-risk" ng-init="disabled = 'locked'">
 
                 <div class="col-lg-12 col-xs-12">
                     <p class="pull-left col-lg-2 col-xs-5 risk-questions">I am a <span class="swiper-input risk-age"><input only-number type="text" name="year" required ng-model="modelVal.A1"></span> years old</p><!-- <select dropdown dropdown-disable="disabled" ng-model="modelVal.A7"><option value="op1">Male</option><option value="op2">Female</option></select> -->
@@ -168,7 +168,7 @@
         </div>
         <div class="swiper-slide">
             <form name="riskAssesment1Form12" novalidate ng-init="step = 1">
-            <div class="swiper-content content-1">
+            <div class="swiper-content content-1 content-risk">
                 <h2>When it comes to investing, I</h2>
                 <div class="radio-cover">
                     <input type="radio" required id="option0Type1" name="option1" ng-model="modelVal.A4" value="op1"><label for="option0Type1"><span></span>Am a beginner</label>
@@ -484,7 +484,7 @@
                         <div class="col-xs-4" ng-if="result >= 0 && result <= 4">
                             <div class="title-image-cover" >
                                 <div class="time-image">
-                                    <img src="assets/images/loader.gif" lazy-img="assets/images/categoryImage1.png">
+                                    <img src="assets/images/categoryImage1.png">
                                 </div>
                                 <div class="point-range">
                                     <p><span>0.0</span> - <span>4.0</span></p>
@@ -494,7 +494,7 @@
                         <div class="col-xs-4" ng-if="result >= 4.1 && result <= 6.0">
                             <div class="title-image-cover">
                                 <div class="time-image">
-                                    <img src="assets/images/loader.gif" lazy-img="assets/images/categoryImage3.png">
+                                    <img src="assets/images/categoryImage3.png">
                                 </div>
                                 <div class="point-range">
                                     <p><span>4.1</span> - <span>6.0</span></p>
@@ -504,7 +504,7 @@
                         <div class="col-xs-4" ng-if="result >= 6.1 && result <= 7.5">
                             <div class="title-image-cover">
                                 <div class="time-image">
-                                    <img src="assets/images/loader.gif" lazy-img="assets/images/assesmentCar.png">
+                                    <img src="assets/images/assesmentCar.png">
                                 </div>
                                 <div class="point-range">
                                     <p><span>6.1</span> - <span>7.5</span></p>
@@ -514,7 +514,7 @@
                         <div class="col-xs-4" ng-if="result >= 7.6 && result <= 9.0">
                             <div class="title-image-cover">
                                 <div class="time-image">
-                                    <img src="assets/images/loader.gif" lazy-img="assets/images/categoryImage2.png">
+                                    <img src="assets/images/categoryImage2.png">
                                 </div>
                                 <div class="point-range">
                                     <p><span>7.6</span> - <span>9.0</span></p>
@@ -524,7 +524,7 @@
                         <div class="col-xs-4" ng-if="result >= 9.1 && result <= 10.0">
                             <div class="title-image-cover">
                                 <div class="time-image">
-                                    <img src="assets/images/loader.gif" lazy-img="assets/images/categoryImage4.png">
+                                    <img src="assets/images/categoryImage4.png">
                                 </div>
                                 <div class="point-range">
                                     <p><span>9.1</span> - <span>10.0</span></p>
@@ -568,7 +568,7 @@
                         <div class="col-xs-12 col-lg-6  score-cover" ng-if="!(result >= 0 && result <= 4)">
                             <div class="col-xs-4">
                                 <div class="time-image">
-                                    <img src="assets/images/loader.gif" lazy-img="assets/images/categoryImage1.png">
+                                    <img src="assets/images/categoryImage1.png">
                                 </div>
                             </div>
                             <div class="col-xs-8">
@@ -582,7 +582,7 @@
                         <div class="col-xs-12 col-lg-6 score-cover" ng-if="!(result >= 6.1 && result <= 7.5)">
                             <div class="col-xs-4">
                                 <div class="time-image">
-                                    <img src="assets/images/loader.gif" lazy-img="assets/images/assesmentCar.png">
+                                    <img src="assets/images/assesmentCar.png">
                                 </div>
                             </div>
                             <div class="col-xs-8">
@@ -596,7 +596,7 @@
                         <div class="col-xs-12 col-lg-6 score-cover" ng-if="!(result >= 4.1 && result <= 6.0)">
                             <div class="col-xs-4">
                                 <div class="time-image">
-                                    <img src="assets/images/loader.gif" lazy-img="assets/images/categoryImage3.png">
+                                    <img src="assets/images/categoryImage3.png">
                                 </div>
                             </div>
                             <div class="col-xs-8">
@@ -610,7 +610,7 @@
                         <div class="col-xs-12 col-lg-6 score-cover" ng-if="!(result >= 7.6 && result <= 9.0)">
                             <div class="col-xs-4">
                                 <div class="time-image">
-                                    <img src="assets/images/loader.gif" lazy-img="assets/images/categoryImage2.png">
+                                    <img src="assets/images/categoryImage2.png">
                                 </div>
                             </div>
                             <div class="col-xs-8">
@@ -624,7 +624,7 @@
                         <div class="col-xs-12 col-lg-6 score-cover" ng-if="!(result >= 9.1 && result <= 10.0)">
                             <div class="col-xs-4">
                                 <div class="time-image">
-                                    <img src="assets/images/loader.gif" lazy-img="assets/images/categoryImage4.png">
+                                    <img src="assets/images/categoryImage4.png">
                                 </div>
                             </div>
                             <div class="col-xs-8">
