--- a/less/goals.less
+++ b/less/goals.less
@@ -6,6 +6,9 @@
 					.image-div{
 						img{
 							width:66%!important;
+							@media @below768{
+								width: 40% !important;
+							}
 						}
 					}
 				}
@@ -13,6 +16,9 @@
 					.image-div{
 						img{
 							width:54%!important;
+							@media @below768{
+								width: 36% !important;
+							}
 						}
 						&.widthDrawImage{
 							img{
@@ -25,6 +31,9 @@
 					.image-div{
 						img{
 							width:80%!important;
+							@media @below768{
+								width: 60% !important;
+							}
 						}
 					}
 				}
@@ -32,6 +41,9 @@
 					.image-div{
 						img{
 							width:58%!important;
+							@media @below768{
+								width: 40% !important;
+							}
 						}
 					}
 				}
@@ -43,6 +55,9 @@
 					.image-div{
 						img{
 							width:58%!important;
+							@media @below768{
+								width: 40% !important;
+							}
 						}
 					}
 				}
@@ -50,6 +65,9 @@
 					.image-div{
 						img{
 							width:60%!important;
+							@media @below768{
+								width: 44% !important;
+							}
 						}
 					}
 				}
@@ -57,6 +75,9 @@
 					.image-div{
 						img{
 							width:60%!important;
+							@media @below768{
+								width: 44% !important;
+							}
 						}
 					}
 				}
@@ -64,6 +85,9 @@
 					.image-div{
 						img{
 							width:60%!important;
+							@media @below768{
+								width: 44% !important;
+							}
 						}
 					}
 				}
