Enable scheme factsheet from all missing pages and implement Go Back from fact sheet

--- a/app/modules/investwithdraw/views/reviewInvestment.html
+++ b/app/modules/investwithdraw/views/reviewInvestment.html
@@ -26,7 +26,7 @@
 							<div class="tbody">
 								<div class="tr" ng-repeat="schemes in eachRecommend.data">
 									<div class="td">
-										<p class="schemes">{{schemes.fund_name}}</p>
+										<p class="schemes" show-factsheet="{{schemes.id}}">{{schemes.fund_name}}</p>
 									</div>
 									<div class="td">
 										<p>{{schemes.category_name}}</p>
