--- a/app/modules/investwithdraw/views/withdrawStart.html
+++ b/app/modules/investwithdraw/views/withdrawStart.html
@@ -30,7 +30,7 @@
 								<div class="tbody">
 									<div class="tr" ng-repeat="schemes in eachRecommend.value">
 										<div class="td">
-											<p class="schemes">{{schemes.name}}</p>
+											<p class="schemes" show-factsheet="{{schemes.fund_id}}">{{schemes.name}}</p>
 										</div>
 										<div class="td">
 											<p>{{schemes.fund_category}}</p>
