--- a/app/modules/smartportfolio/views/compare.html
+++ b/app/modules/smartportfolio/views/compare.html
@@ -87,7 +87,7 @@
 								</div></p>
 							</div>
 							<div class="td">
-								<p class="schemes">{{recommendedScheme.fund_name}}</p>
+								<p class="schemes" show-factsheet="{{recommendedScheme.id}}">{{recommendedScheme.fund_name}}</p>
 							</div>
 							<div class="td">
 								<p>{{recommendedScheme.category_name}}</p>
@@ -134,7 +134,7 @@
 								</div></p>
 							</div>
 							<div class="td">
-								<p class="schemes">{{otherScheme.fund_name}}</p>
+								<p class="schemes" show-factsheet="{{otherScheme.id}}">{{otherScheme.fund_name}}</p>
 							</div>
 							<div class="td">
 								<p>{{otherScheme.category_name}}</p>
